--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Jhenifer _</p>
-        <h1>Eu ensino Programação</h1>
+        <h1>Eu estudo Programação</h1>
         <p>Sou aula do ensino médio . Estou estudando sobre pensamento computacional.
             Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
             que já desenvolvi!</p>
