--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p class="lead">Eu sou Jhenifer _</p>
         <h1>Eu estudo Programação</h1>
         <p>Sou aula do ensino médio . Estou estudando sobre pensamento computacional.
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
+            . Tenho atividades sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
