--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="Gremio_logo.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="Gremio_logo.png" alt="avatar da Jhenifer" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Jhenifer _</p>
         <h1>Eu estudo Programação</h1>
